feat: add filters
